--- a/examples/Angular 指令的5种不同格式.html
+++ b/examples/Angular 指令的5种不同格式.html
@@ -16,6 +16,8 @@
     <p data-ng-bind="demo.model.data"></p>
     <p x-ng-bind="demo.model.data"></p>
 
+    <p ng_bind="demo.model.data"></p>
+
 </div>
 
 
