--- a/examples/Angular 销毁$watch的监听器.html
+++ b/examples/Angular 销毁$watch的监听器.html
@@ -12,7 +12,7 @@
 <p>counter: <span ng-bind="vm.counter"></span></p>
 
 <div>
-    <button type="button" ng-click="vm.counter = vm.counter + 1;">add counter</button>
+    <button class="btn btn-primary" type="button" ng-click="vm.counter = vm.counter + 1;">add counter</button>
 </div>
 <script>
 
