--- a/examples/Angular form表单基本用法.html
+++ b/examples/Angular form表单基本用法.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <script src="../bower_components/angular/angular.js"></script>
     <style>
-        legend {
-            display: block;
-            padding-left: 2px;
-            padding-right: 2px;
-            border: none;
+        form.ng-dirty input.ng-invalid.ng-dirty {
+            border: 1px solid #B02B2C;
         }
+        form.ng-dirty input.ng-valid.ng-dirty {
+            border: 1px solid #6BBA70;
+        }
+
     </style>
 </head>
 <body>
@@ -21,7 +22,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-offset-2 col-md-10">
                 使用ngSubmit提交表单，多个输入域，有提交按钮
             </div>
         </div>
@@ -30,33 +31,37 @@
                 <form id="loginForm" name="loginForm" class="form-horizontal" ng-submit="vm.fn.submit($event)"
                       novalidate>
                     <fieldset ng-disabled="vm.model.isSubmitting">
-                        <legend>表单1</legend>
                         <div class="form-group">
                             <label for="username" class="control-label col-md-2">用户名</label>
 
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 <input id="username" name="username" class="form-control" type="text"
-                                       ng-model="vm.model.username"/>
+                                       ng-model="vm.model.username" required/>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="password" class="control-label col-md-2">密码</label>
 
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 <input id="password" name="password" class="form-control" type="password"
-                                       ng-model="vm.model.password"/>
+                                       ng-model="vm.model.password" required/>
                             </div>
                         </div>
 
                         <!-- 注意button的type类型是submit，这样用户可以通过回车键进行提交，按回车时会调用form上的ng-submit指定的方法 -->
-                        <button class="btn btn-primary" type="submit" form="loginForm">登陆</button>
-                        <button class="btn btn-default" ng-click="vm.fn.reset()" form="loginForm">重置</button>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-6">
+                                <button class="btn btn-primary" type="submit" form="loginForm">登陆</button>
+                                <button class="btn btn-default" ng-click="vm.fn.reset()" form="loginForm">重置</button>
+                            </div>
+                        </div>
+
                     </fieldset>
                 </form>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-offset-2 col-md-6">
                 <!-- 可以通过button标签的html5属性form来指定其所属于哪一个表单 -->
                 <!--<button class="btn btn-primary" type="submit" form="loginForm">登陆</button>-->
                 <!--<button class="btn btn-default" ng-click="vm.fn.reset()" form="loginForm">重置</button>-->
@@ -76,9 +81,9 @@
                 .module('demo')
                 .controller('DemoController', DemoController);
 
-        DemoController.$inject = ['$log'];
+        DemoController.$inject = ['$log', '$scope'];
 
-        function DemoController($log) {
+        function DemoController($log, $scope) {
 
             var vm = this;
             vm.model = {
@@ -92,7 +97,12 @@
             };
 
             function reset() {
+                //重置视图model
                 vm.model.username = vm.model.password = '';
+                //重置表单状态，从而重置表单控件的class，重置样式
+                $log.info($scope.loginForm);    //FormController
+                $scope.loginForm.$setPristine();
+                $scope.loginForm.$setUntouched();
             }
 
             function submit($event) {
